--- a/css/style.css
+++ b/css/style.css
@@ -112,32 +112,30 @@ ul {
 }
 
 .quote-button {
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.75rem 3.5rem;
+  margin: 5rem 2rem;
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
 
-  width: 20%;
-  height: 10%;
-  position: relative;
-  bottom: 50%;
-  
-  background-color: #429434;
-  
-  border-radius:20px;
-
-  color: white;
-  font-size: 2vw;
+ 
 }
 
 .services-button {
 
-  width: 20%;
-  height: 10%;
-  position: relative;
-  bottom: 50%;
-  
-  
-  border-radius:20px;
-  color: white;
-  font-size: 2vw;
-  background-color: #043025;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.75rem 3.5rem;
+  margin: 5rem 2rem;
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
 }
 
 
@@ -145,10 +143,9 @@ ul {
 
 
 .button-container {
-  margin-left:auto;
-  margin-right:auto;
 
-  width: 100vh;
+  text-align:center;
+  width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.24);
   padding: 0;
@@ -156,7 +153,7 @@ ul {
   vertical-align: top;
   position: relative;
   top: 0%;
-  align-content: center;
+
   position:relative;
 }
 
