--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
   margin:0;
   padding:0;
+  box-sizing: border-box;
 }
 
 
@@ -65,7 +66,8 @@ a {
 }
 
 .header {
-  background-color: rgb(7, 68, 31);
+  background: rgb(9,91,41);
+background: linear-gradient(336deg, rgba(9,91,41,1) 26%, rgba(7,68,31,1) 63%, rgba(7,68,31,1) 79%);
   padding: 0;
   margin: 0;
   text-align: center;
@@ -286,3 +288,4 @@ div.desc {
   backdrop-filter: blur(3px);
   z-index: 5;
 }
+
